# frogfs-standalone-demo

./: .gitmodules  CMakeLists.txt  frogfs.yaml
files/: lipsum.txt
src/: main.c
